# dc-localization-tracker

./: main.py  pyproject.toml
.github/workflows/: a.yml  localization_workflow.yml
localizations/: localization_br.json  localization_en.json  localization_es.json
