[tool.poetry]
name = "dc-localization-traker"
version = "0.1.0"
description = ""
authors = ["Marcuth <example@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dragon-city-utils = "^2.1.1"
python-decouple = "^3.8"
discord-webhook = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
